--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                     <li><a href="mailto:damian2014@gmail.com" target="blank" class="fas fa-envelope">Email</a></li>
                 </ul>
             </footer>
-	    <a class="cv" href="docs/Curriculum Vitae - Damián Dries.pdf" target="blank" class="cta">Descargar CV</a>
+	    <div class="button">
+                <a href="docs/Curriculum Vitae  - Damián Dries.pdf" target="blank" class="cta">Descargar CV</a>
+            </div>
         </section>
 
         <!-- Footer -->
