--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
 <head>
     <title>Damián Dries | Desarrollador Java</title>
@@ -33,7 +33,7 @@
                 </ul>
             </footer>
 	    <div class="button">
-                <a href="docs/Curriculum Vitae-Damián Dries.pdf" target="blank" class="cta">Descargar CV</a>
+                <a href="docs/Curriculum_Vitae-Damián_Dries.pdf" target="blank" class="cta">Descargar CV</a>
             </div>
         </section>
 
