--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </ul>
             </footer>
 	    <div class="button">
-                <a href="docs/Curriculum_Vitae-Damián_Dries.pdf" target="blank" class="cta">Descargar CV</a>
+                <a href="docs/Curriculum_Vitae-Damian_Dries.pdf" target="blank" class="cta">Descargar CV</a>
             </div>
         </section>
 
